data/theme/gnome-shell.css
/* ... */
.dash-search-button:hover, .notification-button:hover,
.notification-icon-button:hover, .hotplug-notification-item:hover,
.hotplug-resident-eject-button:hover, .modal-dialog-button:hover {
    background-gradient-start: rgba(255, 255, 255, 0.3);
    background-gradient-end: rgba(255, 255, 255, 0.1);
}

.dash-search-button:selected, .notification-button:focus,
.notification-icon-button:focus, .hotplug-notification-item:focus,
.modal-dialog-button:focus {
    border: 2px solid #8b8b8b;
}

.dash-search-button:active, .dash-search-button:pressed,
.notification-button:active, .notification-icon-button:active,
.hotplug-notification-item:active, .hotplug-resident-eject-button:active,
.modal-dialog-button:active, .modal-dialog-button:pressed {
    background-gradient-start: rgba(255, 255, 255, 0);
    background-gradient-end: rgba(255, 255, 255, 0.2);
}

/* Panel */

#panel {
    color: #ffffff;
    background-color: black;
    border-image: url("panel-border.svg") 1;
    font-size: 10.5pt;
    font-weight: bold;
    height: 1.86em;
}

#panelLeft, #panelCenter {
    spacing: 4px;
}

#panelLeft:ltr {
    padding-right: 4px;
}

#panelLeft:rtl {
    padding-left: 4px;
}

#panelRight:ltr {
    padding-left: 4px;
}

#panelRight:rtl {
    padding-right: 4px;
}

.panel-corner {
    -panel-corner-radius: 10px;
    -panel-corner-background-color: black;
    -panel-corner-inner-border-width: 2px;
    -panel-corner-inner-border-color: transparent;
    -panel-corner-outer-border-width: 1px;
    -panel-corner-outer-border-color: #536272;
}

.panel-corner:active,
.panel-corner:overview,
.panel-corner:focus {
    -panel-corner-inner-border-color: rgba(255,255,255,0.8);
}

#appMenu {
    spacing: 4px;
}

.panel-button #appMenuIcon {
    app-icon-bottom-clip: 1px;
}

.panel-button:active #appMenuIcon,
.panel-button:checked #appMenuIcon,
.panel-button:focus #appMenuIcon {
    app-icon-bottom-clip: 2px;
}

.app-menu-icon {
    width: 24px;
    height: 24px;
}

.panel-button {
    padding: 0px 12px;
    font-weight: bold;
    color: #ccc;
    transition-duration: 100;
}

.panel-button:hover {
    color: white;
    text-shadow: black 0px 2px 2px;
}

.panel-button:active,
.panel-button:overview,
.panel-button:focus {
    border-image: url("panel-button-border.svg") 10 10 0 2;
    background-image: url("panel-button-highlight-wide.svg");
    color: white;
    text-shadow: black 0px 2px 2px;
}

.panel-status-button:active,
.panel-status-button:checked,
.panel-status-button:focus {
    background-image: url("panel-button-highlight-narrow.svg");
}

.panel-button:active > .system-status-icon,
.panel-button:checked > .system-status-icon,
.panel-button:focus > .system-status-icon {
    icon-shadow: black 0px 2px 2px;
}

.panel-menu {
    -boxpointer-gap: 4px
}

#panelUserMenu {
    spacing: 4px;
}

.status-chooser {
    spacing: .4em;
}

.status-chooser .popup-menu-item,
.status-chooser-combo .popup-menu-item {
    padding: .4em;
}

.status-chooser-user-icon {
    border: 2px solid #8b8b8b;
    border-radius: 5px;
    width: 48pt;
    height: 48pt;
}

.status-chooser-user-icon:hover {
    border: 2px solid #bbbbbb;
}

.status-chooser-user-name {
    font-weight: bold;
    font-size: 1.3em;
}

.status-chooser-combo {
    border: 1px solid transparent;
}

.status-chooser-combo.popup-combo-menu {
    background-color: rgba(0,0,0,0.7);
    padding: .4em 0em;
    border-radius: 4px;
    border: 1px solid #5f5f5f;
    color: #ffffff;
    font-size: 10.5pt;
}

.status-chooser-status-item,
.status-chooser-combo > .popup-combobox-item {
    spacing: .4em;
}

.system-status-icon {
    icon-size: 1.14em;
}

/* Overview */

#overview {
    spacing: 12px;
}

.window-caption {
    color: white;
    spacing: 25px;
}

.workspace-controls {
    visible-width: 32px; /* Amount visible before hovering */
}

.workspace-thumbnails-background {
    border: 1px solid rgba(128, 128, 128, 0.4);
    border-right: 0px;
    border-radius: 9px 0px 0px 9px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 8px;
}

.workspace-thumbnails-background:rtl {
    border-right: 1px;
    border-left: 0px;
    border-radius: 0px 9px 9px 0px;
}

.workspace-thumbnails {
    spacing: 7px;
}

.workspace-thumbnail-indicator {
    outline: 2px solid white;
    border: 1px solid #888;
}

.window-caption {
    background: rgba(0,0,0,0.8);
    border: 1px solid rgba(128,128,128,0.40);
    border-radius: 10px;
    font-size: 9pt;
    padding: 2px 8px;
    -shell-caption-spacing: 4px;
}

.window-close {
    background-image: url("close-window.svg");
    height: 34px;
    width: 34px;
    -shell-close-overlap: 20px;
}

.window-close:rtl {
    -st-background-image-shadow: 2px 2px 6px rgba(0,0,0,0.5);
}

/* Dash */

#dash {
    color: #5f5f5f;
    font-size: 9pt;
    padding: 4px 0px;
    background-color: rgba(0, 0, 0, 0.5);
    border: 1px solid rgba(128, 128, 128, 0.4);
    border-left: 0px;
    border-radius: 0px 9px 9px 0px;
}

#dash:rtl {
    border-left: 1px;
    border-right: 0px;
    border-radius: 9px 0px 0px 9px;
}

#dash:empty {
    height: 100px;
    width: 60px;
}

.dash-placeholder {
    background-image: url("dash-placeholder.svg");
    height: 27px;
    width: 48px;
}

#viewSelector {
    spacing: 1em;
    font-size: 12pt;
}

#viewSelectorTabBar {
    padding: 1em;
}

#searchArea {
    padding: 0px 24px;
}

#searchEntry {
    padding: 4px 12px;
    border-radius: 17px;
    color: rgb(128, 128, 128);
    border: 2px solid rgba(245,245,245,0.2);
    background-gradient-start: rgba(5,5,6,0.1);
    background-gradient-end: rgba(254,254,254,0.1);
    background-gradient-direction: vertical;
    selected-color: black;
    caret-color: rgb(128, 128, 128);
    caret-size: 1px;
    width: 250px;
    transition-duration: 300;
    box-shadow: inset 0px 2px 4px rgba(0,0,0,0.6);
}
/* ... */

